jdart/src/example-html.parser/html/parser/test.java
/* test.java */
/* Generated By:JavaCC: Do not edit this line. test.java */
package html.parser;
import java.util.Scanner;
public class test implements testConstants {
  static int TD_Count=0,TR_Count=0,ListItem_Count=0;
  public static void main(String [] arg)
  {
    try
    {
      test parser = new test(System.in);
      String rus = parser.start();
      System.out.print(rus);
    }
    catch (Exception e)
    {
      System.out.print(e);
    }
  }

//----------------------------
  final public String start() throws ParseException {
    HTML_DOC();
{if ("" != null) return "\n---------------\nValid Html Document\n"+"TD Count="+TD_Count+"\nTR Count="+TR_Count;}
    throw new Error("Missing return statement in function");
  }

  final public String HTML_DOC() throws ParseException {String content="no strings";
    jj_consume_token(ST);
    jj_consume_token(HTML);
    if (jj_2_1(2)) {
      jj_consume_token(55);
      jj_consume_token(STRING);
      jj_consume_token(56);
    } else {
      ;
    }
    jj_consume_token(ND);
    DOC_HEAD();
    DOC_BODY();
    label_1:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_1;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ST);
    jj_consume_token(57);
    jj_consume_token(HTML);
    jj_consume_token(ND);
System.out.print("HTML - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String DOC_HEAD() throws ParseException {String content="no strings";
    jj_consume_token(ST);
    jj_consume_token(HEAD);
    jj_consume_token(ND);
    label_2:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_2;
      }
      content = jj_consume_token(STRING).image;
    }
    if (jj_2_4(2)) {
      Title();
    } else {
      ;
    }
    label_3:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_3;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ST);
    jj_consume_token(57);
    jj_consume_token(HEAD);
    jj_consume_token(ND);
System.out.print("Head - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String DOC_BODY() throws ParseException {String content="no strings";
    jj_consume_token(ST);
    jj_consume_token(BODY);
    jj_consume_token(ND);
    label_4:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_7(2)) {
        Paragraph();
      } else if (jj_2_8(2)) {
        Anchor();
      } else if (jj_2_9(2)) {
        IMG();
      } else if (jj_2_10(2)) {
        DIV();
      } else if (jj_2_11(2)) {
        Header();
      } else if (jj_2_12(2)) {
        details();
      } else if (jj_2_13(2)) {
        Table();
      } else if (jj_2_14(2)) {
        List();
      } else if (jj_2_15(2)) {
        Button();
      } else if (jj_2_16(2)) {
        content = jj_consume_token(STRING).image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(ST);
    jj_consume_token(57);
    jj_consume_token(BODY);
    jj_consume_token(ND);
System.out.print("Body - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public void Table() throws ParseException {
    jj_consume_token(ST_TABLE);
    label_5:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_5;
      }
      TD();
    }
    jj_consume_token(ND_TABLE);
  }

  final public void TD() throws ParseException {
    jj_consume_token(ST_TD);
    label_6:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_6;
      }
      TR();
    }
    jj_consume_token(ND_TD);
TD_Count++;
  }

  final public String TR() throws ParseException {String content="no strings";
    jj_consume_token(ST_TR);
    label_7:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_7;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_TR);
TR_Count++;
    System.out.print("TR ["+TR_Count+"]- > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Title() throws ParseException {String content="no strings";
    jj_consume_token(ST_TITLE);
    label_8:
    while (true) {
      if (jj_2_20(2)) {
        ;
      } else {
        break label_8;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_TITLE);
System.out.print("Title - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Paragraph() throws ParseException {String content="no strings";
    jj_consume_token(ST_P);
    label_9:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_9;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_P);
System.out.print("P - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Anchor() throws ParseException {String content="no strings";
    jj_consume_token(ST_A);
    label_10:
    while (true) {
      if (jj_2_22(2)) {
        ;
      } else {
        break label_10;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_A);
System.out.print("Anchor - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String IMG() throws ParseException {String content="no strings";
    content = jj_consume_token(ST_IMG).image;
System.out.print("IMG - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String DIV() throws ParseException {String content="no additional strings";
    jj_consume_token(ST_DIV);
    label_11:
    while (true) {
      if (jj_2_23(2)) {
        ;
      } else {
        break label_11;
      }
      if (jj_2_29(2)) {
        if (jj_2_24(2)) {
          Header();
        } else if (jj_2_25(2)) {
          Button();
        } else if (jj_2_26(2)) {
          List();
        } else if (jj_2_27(2)) {
          Paragraph();
        } else if (jj_2_28(2)) {
          Span();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_30(2)) {
        content = jj_consume_token(STRING).image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(ND_DIV);
System.out.print("DIV - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Span() throws ParseException {String content="no additional strings";
    jj_consume_token(ST_SPAN);
    label_12:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_12;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_SPAN);
System.out.print("Span - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String details() throws ParseException {String content="no details string";
    jj_consume_token(ST_DETAILS);
    label_13:
    while (true) {
      if (jj_2_32(2)) {
        ;
      } else {
        break label_13;
      }
      if (jj_2_33(2)) {
        summary();
      } else if (jj_2_34(2)) {
        Paragraph();
      } else if (jj_2_35(2)) {
        content = jj_consume_token(STRING).image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(ND_DETAILS);
System.out.print("Details - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String summary() throws ParseException {String content="no details string";
    jj_consume_token(ST_SUMMARY);
    label_14:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_14;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_SUMMARY);
System.out.print("Summary - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public void List() throws ParseException {
    jj_consume_token(ST_OL);
ListItem_Count=0; System.out.print("---------------\n");
    label_15:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_15;
      }
      ListItem();
    }
    jj_consume_token(ND_OL);
System.out.print("OL [Count] - > "+ListItem_Count+'\n');
      System.out.print("---------------\n");
  }

  final public String ListItem() throws ParseException {String content="";
    jj_consume_token(ST_LI);
    label_16:
    while (true) {
      if (jj_2_38(2)) {
        ;
      } else {
        break label_16;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_LI);
ListItem_Count++;
    System.out.print(ListItem_Count+". "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Button() throws ParseException {String content="";
    jj_consume_token(ST_BUTTON);
    label_17:
    while (true) {
      if (jj_2_39(2)) {
        ;
      } else {
        break label_17;
      }
      content = jj_consume_token(STRING).image;
    }
    jj_consume_token(ND_BUTTON);
System.out.print("Button - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  final public String Header() throws ParseException {String content="no strings",Selected="H";
    if (jj_2_46(2)) {
      Selected = jj_consume_token(ST_H1).image;
      label_18:
      while (true) {
        if (jj_2_40(2)) {
          ;
        } else {
          break label_18;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H1);
    } else if (jj_2_47(2)) {
      Selected = jj_consume_token(ST_H2).image;
      label_19:
      while (true) {
        if (jj_2_41(2)) {
          ;
        } else {
          break label_19;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H2);
    } else if (jj_2_48(2)) {
      Selected = jj_consume_token(ST_H3).image;
      label_20:
      while (true) {
        if (jj_2_42(2)) {
          ;
        } else {
          break label_20;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H3);
    } else if (jj_2_49(2)) {
      Selected = jj_consume_token(ST_H4).image;
      label_21:
      while (true) {
        if (jj_2_43(2)) {
          ;
        } else {
          break label_21;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H4);
    } else if (jj_2_50(2)) {
      Selected = jj_consume_token(ST_H5).image;
      label_22:
      while (true) {
        if (jj_2_44(2)) {
          ;
        } else {
          break label_22;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H5);
    } else if (jj_2_51(2)) {
      Selected = jj_consume_token(ST_H6).image;
      label_23:
      while (true) {
        if (jj_2_45(2)) {
          ;
        } else {
          break label_23;
        }
        content = jj_consume_token(STRING).image;
      }
      jj_consume_token(ND_H6);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
System.out.print(Selected+" - > "+content+'\n');
    {if ("" != null) return content;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  private boolean jj_2_47(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  private boolean jj_2_48(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  private boolean jj_2_49(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  private boolean jj_2_50(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  private boolean jj_2_51(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  private boolean jj_3_36()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_28()
 {
    if (jj_3R_36()) return true;
    return false;
  }

  private boolean jj_3_43()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_34()
 {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_24()
 {
    if (jj_scan_token(ST_TITLE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_20()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(ND_TITLE)) return true;
    return false;
  }

  private boolean jj_3_42()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    if (jj_3R_30()) return true;
    return false;
  }

  private boolean jj_3R_37()
 {
    if (jj_scan_token(ST_SUMMARY)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_36()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(ND_SUMMARY)) return true;
    return false;
  }

  private boolean jj_3_41()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }
